Fix font sizes on mobile

--- a/queries.css
+++ b/queries.css
@@ -11,10 +11,15 @@
 
 	.spending {
 		margin-bottom: 20px;
+		font-size: 25px;
 	}
 
 	.amount {
 		font-size: 15px;
+	}
+
+	#footer {
+		font-size: 11px;
 	}
 
 }
@@ -22,10 +27,6 @@
 @media only screen and (max-width: 480px) {
 
 	.amount {
-		font-size: 12px;
-	}
-
-	#footer {
 		font-size: 12px;
 	}
 
